--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.9",
-    "apollo-link": "^1.2.14",
-    "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.2.0",
     "graphql-tag": "^2.10.3",
+    "next": "9.4.4",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
     "react-apollo": "^3.1.5",
-    "react-scripts": "3.4.1",
+    "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
+  },
+  "devDependencies": {
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "url-loader": "^4.1.0"
   }
 }
